--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -1,4 +1,4 @@
 <h1>Doctors</h1>
 <%@doctors.each do |doctor| %>
-  <p><%=doctor.name%></p>
+  <p><%=link_to doctor.name, doctor_path(doctor.id)%></p>
   <%end%>
