--- a/app/assets/stylesheets/doctors.scss
+++ b/app/assets/stylesheets/doctors.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the doctors controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+body,h1,p{
+  background-color:white;
+  font-family: sans-serif;
+  color: black;
+  border: 1px solid
+}
